--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "eleventy",
-        "start": "eleventy --serve",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "npm-run-all -p watch:*",
+        "build": "npm-run-all -s build:eleventy build:sass",
+        "watch:eleventy": "eleventy --serve",
+        "build:eleventy": "eleventy",
+        "watch:sass": "node-sass --watch --output-style=expanded --source-maps=true src/_sass --output=dist/css",
+        "build:sass": "node-sass --output-style=compressed --omit-source-map-url src/_sass --output=dist/css/"
     },
     "author": "MoritzLost <info@herebedragons.world>",
     "license": "UNLICENSED",
     "dependencies": {
-        "@11ty/eleventy": "^0.9.0"
+        "@11ty/eleventy": "^0.9.0",
+        "node-sass": "^4.12.0",
+        "npm-run-all": "^4.1.5"
     }
 }
