--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "@11ty/eleventy": "^0.9.0",
         "node-sass": "^4.12.0",
         "npm-run-all": "^4.1.5"
+    },
+    "devDependencies": {
+        "eleventy-plugin-toc": "^1.0.1",
+        "markdown-it": "^10.0.0",
+        "markdown-it-anchor": "^5.2.5"
     }
 }
