--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     },
     "dependencies": {
         "@11ty/eleventy": "^0.9.0",
+        "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
         "eleventy-plugin-toc": "^1.0.1",
         "hamburgers": "^1.1.3",
         "markdown-it": "^10.0.0",
         "markdown-it-anchor": "^5.2.5",
         "node-sass": "^4.12.0",
         "npm-run-all": "^4.1.5",
+        "prism-themes": "^1.3.0",
         "rfs": "^9.0.2"
     }
 }
