--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "license": "UNLICENSED",
     "author": "MoritzLost <info@herebedragons.world>",
     "scripts": {
-        "build": "npm-run-all -s build:eleventy build:sass",
+        "build": "npm run build:eleventy && npm run build:sass",
         "build:eleventy": "eleventy",
         "build:sass": "node-sass --output-style=compressed --omit-source-map-url src/_sass --output=dist/css/",
         "start": "npm-run-all -p watch:*",
@@ -25,8 +25,10 @@
         "markdown-it": "^10.0.0",
         "markdown-it-anchor": "^5.2.5",
         "node-sass": "^4.12.0",
-        "npm-run-all": "^4.1.5",
         "prism-themes": "^1.3.0",
         "rfs": "^9.0.2"
+    },
+    "devDependencies": {
+        "npm-run-all": "^4.1.5"
     }
 }
