--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "dependencies": {
         "@11ty/eleventy": "^0.9.0",
         "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
-        "eleventy-plugin-toc": "^1.0.1",
         "hamburgers": "^1.1.3",
+        "jsdom": "^15.2.1",
         "markdown-it": "^10.0.0",
         "markdown-it-anchor": "^5.2.5",
         "node-sass": "^4.12.0",
