--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
         "@11ty/eleventy": "^0.11.0",
         "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
         "@fortawesome/fontawesome-free": "^5.14.0",
+        "express": "^4.17.1",
+        "fast-glob": "^3.2.4",
+        "globby": "^11.0.1",
         "hamburgers": "^1.1.3",
         "jsdom": "^16.4.0",
         "markdown-it": "^11.0.0",
         "markdown-it-anchor": "^5.2.5",
         "node-sass": "^4.13.1",
         "prism-themes": "^1.3.0",
+        "puppeteer": "^5.2.1",
         "rfs": "^9.0.2"
     },
     "devDependencies": {
