--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
         "build:sass": "node-sass --output-style=compressed --omit-source-map-url src/_sass --output=dist/css/",
         "start": "npm-run-all build:sass -p watch:*",
         "watch:eleventy": "eleventy --serve",
-        "watch:sass": "node-sass --watch --output-style=expanded --source-maps=true src/_sass --output=dist/css"
+        "watch:sass": "node-sass --watch --output-style=expanded --source-maps=true src/_sass --output=dist/css",
+        "generate-preview-images": "node ./src/generate-preview-images.js"
     },
     "dependencies": {
         "@11ty/eleventy": "^0.11.0",
         "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
         "@fortawesome/fontawesome-free": "^5.14.0",
+        "express": "^4.17.1",
+        "fast-glob": "^3.2.4",
         "hamburgers": "^1.1.3",
         "jsdom": "^16.4.0",
         "markdown-it": "^11.0.0",
         "markdown-it-anchor": "^5.2.5",
         "node-sass": "^4.13.1",
         "prism-themes": "^1.3.0",
+        "puppeteer": "^5.3.1",
         "rfs": "^9.0.2"
     },
     "devDependencies": {
