--- a/package.json
+++ b/package.json
@@ -13,30 +13,34 @@
         "url": "https://github.com/MoritzLost/ProcessWireDev.git"
     },
     "license": "UNLICENSED",
-    "author": "MoritzLost <info@herebedragons.world>",
+    "author": "MoritzLost <m@moritzlost.de>",
     "scripts": {
         "build": "npm run build:eleventy && npm run generate-preview-images && npm run build:sass",
         "build:eleventy": "eleventy",
-        "build:sass": "node-sass --output-style=compressed --omit-source-map-url src/_sass --output=dist/css/",
+        "build:sass": "sass --style compressed --no-source-map src/_sass/main.scss dist/css/main.css",
         "start": "npm-run-all build:sass -p watch:*",
         "watch:eleventy": "eleventy --serve",
-        "watch:sass": "node-sass --watch --output-style=expanded --source-maps=true src/_sass --output=dist/css",
+        "watch:sass": "sass --watch --style expanded --embed-source-map src/_sass/main.scss dist/css/main.css",
         "generate-preview-images": "node ./src/generate-preview-images.js"
     },
     "dependencies": {
-        "@11ty/eleventy": "^0.11.1",
-        "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
-        "@fortawesome/fontawesome-free": "^5.15.1",
+        "@11ty/eleventy": "^1.0.1",
+        "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+        "@fortawesome/fontawesome-free": "^6.1.1",
         "generate-preview-images": "^0.3.0",
-        "hamburgers": "^1.1.3",
-        "jsdom": "^16.4.0",
-        "markdown-it": "^12.0.2",
-        "markdown-it-anchor": "^6.0.0",
-        "node-sass": "^5.0.0",
-        "prism-themes": "^1.5.0",
-        "rfs": "^9.0.3"
+        "hamburgers": "^1.2.1",
+        "jsdom": "^20.0.0",
+        "markdown-it": "^13.0.1",
+        "markdown-it-anchor": "^8.6.4",
+        "prism-themes": "^1.9.0",
+        "rfs": "^9.0.6",
+        "sass": "^1.53.0"
     },
     "devDependencies": {
         "npm-run-all": "^4.1.5"
+    },
+    "engines": {
+        "node": "^16.16.0",
+        "npm": "^8.13.2"
     }
 }
